# unicode-string-shortener

./: Cargo.toml  Makefile  README.md  build.rs  map.bincode  map.tsv  map.txt  map2.tsv  notes.txt  wikipedia blocks.txt
.devcontainer/: devcontainer.json
docs/: index.html  style-a65a50037ce4db25.css  unishorten-frontend-6ffaf9c52d7d86e4.js  unishorten-frontend-73c005c4daedf003.js  unishorten-frontend-73c005c4daedf003_bg.wasm  unishorten-frontend-c7c57c35feb5d98e.js  unishorten-frontend-c7c57c35feb5d98e_bg.wasm  unishorten-frontend-f21130fab15468c4.js  unishorten-frontend-f21130fab15468c4_bg.wasm  unishorten-frontend-f73a0451c5690631.js  unishorten-frontend-f73a0451c5690631_bg.wasm
program/: Cargo.toml
program/src/: lib.rs  main.rs  map.bincode
src/: build.rs  lib.rs  main.rs  map.bincode  map.tsv  search.rs
website/: Cargo.toml  README.md  Trunk.toml  index.html  style.scss
website/src/: main.rs
