[package]
name = "unishorten"
author = "Michael Noguera"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/michaelnoguera/unicode-string-shortener/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.0.32", features = ["derive"] }
kdam = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.17"
unic-char-range = "0.9.0"
unidecode = "0.3.0"
